# forgery

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  codecov.yml  codex_review.md  initial.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
benches/: generators.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_integers.rs  fuzz_rng.rs
python/forgery/: __init__.py  __init__.pyi  _forgery.pyi
src/: error.rs  lib.rs  locale.rs  rng.rs
src/data/: formats.rs  macros.rs  mod.rs  traits.rs
src/data/de_de/: banks.rs  bundeslaender.rs  cities.rs  color_names.rs  companies.rs  first_names.rs  last_names.rs  mod.rs  streets.rs
src/data/en_gb/: banks.rs  cities.rs  color_names.rs  companies.rs  counties.rs  first_names.rs  last_names.rs  mod.rs  streets.rs
src/data/en_us/: banks.rs  cities.rs  color_names.rs  companies.rs  countries.rs  first_names.rs  last_names.rs  lorem.rs  mod.rs  states.rs  streets.rs  tlds.rs
src/data/es_es/: banks.rs  cities.rs  color_names.rs  companies.rs  first_names.rs  last_names.rs  mod.rs  provinces.rs  streets.rs
src/data/fr_fr/: banks.rs  cities.rs  color_names.rs  companies.rs  first_names.rs  last_names.rs  mod.rs  regions.rs  streets.rs
src/data/it_it/: banks.rs  cities.rs  color_names.rs  companies.rs  first_names.rs  last_names.rs  mod.rs  regions.rs  streets.rs
src/data/ja_jp/: banks.rs  cities.rs  color_names.rs  companies.rs  first_names.rs  last_names.rs  mod.rs  prefectures.rs  streets.rs
src/providers/: address.rs  async_records.rs  colors.rs  company.rs  custom.rs  datetime.rs  finance.rs  identifiers.rs  internet.rs  mod.rs  names.rs  network.rs  numbers.rs  password.rs  phone.rs  records.rs  text.rs
tests/: __init__.py  conftest.py  test_async.py  test_batch.py  test_coverage_gaps.py  test_custom_providers.py  test_error_paths.py  test_integration.py  test_locales.py  test_new_features.py  test_phase2_providers.py  test_providers.py  test_records.py  test_seeding.py
tests/benchmarks/: __init__.py  bench_vs_faker.py
