[package]
name = "forgery"
version = "0.1.0"
edition = "2021"
description = "Fake data at the speed of Rust"
license = "MIT"
repository = "https://github.com/williajm/forgery"
readme = "README.md"
keywords = ["faker", "fake", "data", "testing", "mock"]
categories = ["development-tools::testing"]

[lib]
name = "_forgery"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
pyo3 = "0.27"
rand = "0.9"
rand_chacha = "0.9"

# Arrow integration for records_arrow()
arrow-array = "57"
arrow-buffer = "57"
arrow-schema = "57"
pyo3-arrow = "0.15"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
criterion = "0.8"
proptest = "1.9"

[[bench]]
name = "generators"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lints.rust]
missing_docs = "deny"
